fix: Adjust margin-top for transactions content to ensure proper spacing in layout

--- a/src/app/pages/transactions/transactions.scss
+++ b/src/app/pages/transactions/transactions.scss
@@ -9,7 +9,9 @@
 
   &__content {
     @include mixins.card();
-    margin-top: variables.$spacing-400;
+    & {
+      margin-top: variables.$spacing-400;
+    }
 
     &-buttons {
       display: flex;
